# llm-archive-v2

./: .gitignore  AGENT_COORDINATION.md  ARCHITECTURE.md  BACKEND_STATUS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DAILY_STANDUP.md  DEPLOYMENT.md  FRONTEND_STATUS.md  README.md  REQUIREMENTS.md  TEST_STATUS.md  V2_SUMMARY.md  init.sh  test_import.sh
.github/workflows/: ci.yml
backend/: .gitignore  Cargo.toml  README.md  build.rs
backend/migrations/: 001_init.sql
backend/src/: cache.rs  lib.rs  main.rs  main_enhanced.rs  search_enhanced.rs  streaming.rs
backend/src/parsers/: IMPORT_STATUS.md  chatgpt.rs  claude.rs  common.rs  gemini.rs  mod.rs  zed.rs
backend/tests/: api_test.rs  integration_tests.rs  mod.rs  parser_tests.rs  parsers_test.rs  performance_tests.rs  regression_tests.rs  test_utils.rs
frontend/: package.json  playwright.config.ts  svelte.config.js  vitest.config.js
frontend/src/: app.css
frontend/src/lib/: utils.ts
frontend/src/lib/components/: Message.svelte  Message.test.ts
frontend/src/lib/stores/: search.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/conversations/: +page.svelte
frontend/src/routes/conversations/[id]/: +page.svelte
frontend/src/routes/stats/: +page.svelte
frontend/tests/: e2e.test.js  setup.ts
frontend/tests/e2e/: conversations.spec.ts  homepage.spec.ts  import-scenarios.spec.ts  import.spec.ts
frontend/tests/fixtures/: chatgpt-export.json
frontend/tests/integration/: api.test.ts
parsers/: __init__.py  chatgpt_parser.py  claude_parser.py  gemini_parser.py  xai_parser.py  zed_parser.py
src/: config.rs  errors.rs  main.rs  metrics.rs  models.rs  search.rs
src/db/: mod.rs  schema.rs
src/import/: mod.rs  python_bridge.rs
src/import/parsers/: chatgpt.rs  claude.rs  gemini.rs  mod.rs  xai.rs  zed.rs
src/server/: mod.rs  templates.rs
static/: style.css
templates/: base.html  conversation.html  index.html  search.html
test-data/: chatgpt-sample.json  claude-sample.json  gemini-sample.json  zed-sample.json
