[package]
name = "llm-archive"
version = "2.0.0"
edition = "2021"
authors = ["LLM Archive Contributors"]
description = "Fast, focused tool for searching LLM conversation archives"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "compression", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "json", "time"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Templates
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

# Python interop for migration
pyo3 = { version = "0.20", features = ["auto-initialize", "chrono"] }
pythonize = "0.19"

# Error handling & logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utils
once_cell = "1.19"
regex = "1.10"
lazy_static = "1.4"
futures = "0.3"
bytes = "1.5"
html-escape = "0.2"
toml = "0.8"
shellexpand = "3"
clap = { version = "4", features = ["derive"] }

# File handling
walkdir = "2.4"
glob = "0.3"

# Performance monitoring
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

[dev-dependencies]
insta = { version = "1.34", features = ["json"] }
tempfile = "3.8"
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "llm-archive"
path = "src/main.rs"