[package]
name = "llm-archive-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTML parsing for some providers
scraper = "0.18"

# Async stream utilities
tokio-stream = "0.1"

# Async trait support
async-trait = "0.1"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
tempfile = "3.8"
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
mockall = "0.12"

# Performance testing
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3