[package]
name = "llm-archive-v2"
version = "0.2.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Enhanced features
lru = "0.12"
futures = "0.3"
async-stream = "0.3"
chrono = "0.4"

# Error handling
anyhow = "1"
thiserror = "1"

[build-dependencies]
sqlx = { version = "0.7", features = ["sqlite", "migrate"] }

[dev-dependencies]
axum-test = "13"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3